# data_mcp

./: .gitignore  Cargo.toml  PLAN.md  bench_pca.sh  call_api.py  gen_dataset.py  gen_test_pair.py  generate_test_csvs.py  qrc_nonlinearity_metrics_writeup.txt  results.txt  run_datasets.sh  run_with_ollama.py  smoke_test.sh
benches/: profiling.rs  profiling_bench.rs
src/: dataset.rs  dataset.rs.bak2  error.rs  lib.rs  main.rs  server.rs  util.rs
src/profiling/: categorical.rs  correlation.rs  distribution.rs  entropy.rs  missing.rs  mod.rs  numeric.rs  reservoir.rs  shape.rs  sparsity.rs
test_data/: large.csv  linear.csv  messy.csv  nonlinear.csv  simple.csv  single_column.csv  wide.csv
tests/: integration.rs
