[package]
name = "mcp"
version = "0.1.0"
edition = "2024"

[dependencies]
csv = "1"
faer = "0.24"
ndarray = "0.16"
ndarray-stats = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "profiling"
harness = false
