[package]
name = "mcp"
version = "0.1.0"
edition = "2024"

[dependencies]
arrow = { version = "54", default-features = false, features = ["ffi"] }
csv = "1"
faer = "0.24"
ndarray = { version = "0.16", features = ["blas"] }
cblas-sys = "0.1"
parquet = { version = "54", default-features = false, features = ["arrow", "snap"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "profiling"
harness = false
